--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:src="@mipmap/ic_launcher"
-        android:id="@+id/list_tem_icon"
+        android:id="@+id/list_item_icon"
         android:layout_gravity="center_vertical" />
     <LinearLayout
         android:layout_width="0dp"
@@ -25,13 +25,13 @@
             android:gravity="center_vertical"
             android:text="Today"
             android:layout_gravity="center_vertical"
-            android:id="@+id/list_tem_date_txtvw" />
+            android:id="@+id/list_item_date_txtvw" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:text="Sunny"
-            android:id="@+id/list_tem_forecast_txtvw" />
+            android:id="@+id/list_item_forecast_txtvw" />
     </LinearLayout>
 
     <LinearLayout
@@ -44,12 +44,12 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="88"
-            android:id="@+id/list_tem_high_txtvw" />
+            android:id="@+id/list_item_high_txtvw" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="63"
             android:gravity="center"
-            android:id="@+id/list_tem_low_txtvw" />
+            android:id="@+id/list_item_low_txtvw" />
     </LinearLayout>
 </LinearLayout>
